<resources>
    <string name="facebook_app_id" translatable="false">615878843792553</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb615878843792553</string>
    <string name="facebook_client_token" translatable="false">48ce8d639258e5abc3fa4d0ce4c6e068</string>

    <string name="app_name">YouthWorkHub</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="find_side_hustle_title">Check out the easiest way to find a side hustle!</string>
    <string name="find_side_hustle_desc">If you\'re a student, job seeker or just looking to make some extra cash, you\'re in the right place.</string>
    <string name="post_job_title">YouthWorkHub is also the perfect place to post a vacancy!</string>
    <string name="post_job_desc">If you have things to be done, here you can find a person to do them for you.</string>
    <string name="welcome3_title">Whether you\'re looking for the perfect candidate or for the perfect job YouthWorkHub has you covered!</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_confirm_password">Confirm password</string>
    <string name="prompt_email">Email</string>
    <string name="action_log_in">Log in</string>
    <string name="dont_have_account">Don\'t have an account? Register now</string>
    <string name="login">Log in</string>
    <string name="orLogin">or log in with</string>
    <string name="register">Register</string>
    <string name="already_have_account">Already have an account? Log in now</string>
    <string name="prompt_username">Username</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="saved">Saved</string>
    <string name="account">Account</string>
    <string name="jobs_title">JOBS</string>
    <string name="create_job_title">CREATE JOB</string>
    <string name="saved_title">SAVED</string>
    <string name="account_title">ACCOUNT</string>
    <string name="apply">Apply</string>
    <string name="create_job">Create Job</string>
    <string name="title">Title</string>
    <string name="desc">Description</string>
    <string name="skills">Skills</string>
    <string name="location">Location</string>
    <string name="price">Price</string>
    <string name="my_posts">My posts</string>
    <string name="name">Name</string>
    <string name="surname"> Surname</string>
    <string name="username">Username</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="log_out">Log out</string>
    <string name="log_out_messege">Are you sure you want to log out?</string>
    <string name="save">Save</string>
    <string name="username_error">Username can\'t be empty!</string>
    <string name="name_error">Name can\'t be empty!</string>
    <string name="surname_error">Surname can\'t be empty!</string>
    <string name="update_success">"Successfully updated account!"</string>
    <string name="update_failed">"Failed to update account!"</string>
    <string name="login_error">Email or password can not be empty.</string>
    <string name="email_error">Email can not be empty.</string>
    <string name="pass_error">Password can not be empty.</string>
    <string name="confirm_pass_error">Passwords do not match.</string>
    <string name="success_job_created">Job created successfully!</string>
    <string name="skip_login">Skip login</string>
    <string name="create_account">Please create an account to open this screen.</string>
</resources>