<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white_variant"
    tools:context=".ui.fragments.CreateJobFragment">

    <ImageView
        android:id="@+id/image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/circle_gray"
        app:layout_constraintBottom_toTopOf="@+id/TitleLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/TitleLayout"
        android:layout_width="match_parent"
        style="@style/outlinedRoundedButtons"
        android:textColorHint="@color/black_variant"
        app:endIconMode="clear_text"
        app:endIconTint="@color/black_variant"
        app:layout_constraintBottom_toTopOf="@+id/decriptionLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/image">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/titleInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/title"
            android:inputType="text"
            android:textColor="@color/black_variant" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/decriptionLayout"
        android:layout_width="match_parent"
        style="@style/outlinedRoundedButtons"
        android:textColorHint="@color/black_variant"
        app:endIconMode="clear_text"
        app:endIconTint="@color/black_variant"
        app:layout_constraintBottom_toBottomOf="@+id/skillsLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TitleLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/decriptionInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/desc"
            android:inputType="text"
            android:textColor="@color/black_variant" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/skillsLayout"
        android:layout_width="match_parent"
        style="@style/outlinedRoundedButtons"
        android:textColorHint="@color/black_variant"
        app:endIconMode="clear_text"
        app:endIconTint="@color/black_variant"
        app:layout_constraintBottom_toBottomOf="@+id/locationLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/decriptionLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/skillsInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/skills"
            android:inputType="text"
            android:textColor="@color/black_variant" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/locationLayout"
        android:layout_width="match_parent"
        style="@style/outlinedRoundedButtons"
        android:textColorHint="@color/black_variant"
        app:endIconMode="clear_text"
        app:endIconTint="@color/black_variant"
        app:layout_constraintBottom_toBottomOf="@+id/priceLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/skillsLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/locationInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/location"
            android:inputType="text"
            android:textColor="@color/black_variant" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/priceLayout"
        android:layout_width="match_parent"
        style="@style/outlinedRoundedButtons"
        android:textColorHint="@color/black_variant"
        app:endIconMode="clear_text"
        app:endIconTint="@color/black_variant"
        app:layout_constraintBottom_toBottomOf="@+id/postJob"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/locationLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/priceInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/price"
            android:inputType="text"
            android:textColor="@color/black_variant" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/postJob"
        style="@style/primaryButtonStyle"
        android:text="@string/create_job"
        app:layout_constraintBottom_toBottomOf="@+id/priceLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>